@@ -21,10 +21,22 @@ if defined? GDBM
       FileUtils.rm_rf TMPROOT if File.directory?(TMPROOT)
     end
 
-    def test_open
+    def test_reader_open
       GDBM.open("#{TMPROOT}/a.dbm") {}
       v = GDBM.open("#{TMPROOT}/a.dbm", nil, GDBM::READER) {|d|
         assert_raises(GDBMError) { d["k"] = "v" }
+        true
+      }
+      assert(v)
+    end
+
+    def test_newdb_open
+      GDBM.open("#{TMPROOT}/a.dbm") {|dbm|
+        dbm["k"] = "v"
+      } 
+      v = GDBM.open("#{TMPROOT}/a.dbm", nil, GDBM::NEWDB) {|d|
+        assert_equal(0, d.length)
+        assert_nil(d["k"])
         true
       }
       assert(v)
